# xushi2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
data/replays/: golden_phase0_basic.txt
docs/: action_spec.md  coding_philosophy.md  determinism_rules.md  game_design.md  memory_toy.md  observation_spec.md  replay_format.md  rl_design.md
docs/plans/: 2026-04-21-memory-toy-plan.md  2026-04-22-ppo-recurrent-split.md  2026-04-22-sim-cpp-modularization.md  2026-04-23-phase2-result.md  2026-04-24-phase3-noop-probe-result.md  2026-04-24-phase3-to-phase4-cleanup.md  2026-04-24-phase4-prep.md  2026-04-24-spec-drift-audit.md  2026-05-07-phase3-result.md  2026-05-07-phase4-critic-obs-design.md  2026-05-07-phase4-critic-obs-implementation.md  2026-05-07-phase4-mappo-env-design.md  2026-05-07-phase4-mappo-env-implementation.md  2026-05-07-phase4-result.md  phase1_environment.md
experiments/configs/: phase0_determinism.yaml  phase1b_env_smoke.yaml  phase2_memory_toy.yaml  phase3_ranger_noop_probe.yaml  phase3_ranger_objective_curriculum.yaml  phase3_ranger_objective_curriculum_warmstart.yaml  phase3_ranger_objective_curriculum_warmstart_v2.yaml  phase3_ranger_objective_curriculum_warmstart_v3.yaml  phase3_ranger_objective_push.yaml  phase3_ranger_recurrent.yaml  phase3_ranger_recurrent_long.yaml  phase3_ranger_smoke.yaml  phase4_mappo_basic.yaml  phase4_mappo_noop.yaml  phase4_mappo_noop_probe.yaml  phase4_mappo_smoke.yaml
python/: manual_obs.csv  manual_reward.csv  pyproject.toml
python/envs/: __init__.py  memory_toy.py  phase3_ranger.py  phase4_mappo.py
python/eval/: __init__.py  eval.py  eval_memory_toy.py  eval_phase3.py
python/scripts/: README.md  diag_phase3_plumbing.py  diag_phase4_walk_objective.py  dump_replay.py
python/tests/: test_bindings_obs.py  test_env.py  test_eval_dump.py  test_eval_memory_toy.py  test_memory_toy_env.py  test_models.py  test_obs_manifest.py  test_phase0_determinism.py  test_phase2_early_stop.py  test_phase3_ranger.py  test_phase4_mappo_env.py  test_phase_registry.py  test_ppo_recurrent_invariants.py  test_ppo_recurrent_logging.py  test_ppo_recurrent_lr_schedule.py  test_reward.py  test_rollout_buffer.py  test_warm_start.py
python/train/: __init__.py  mappo.py  models.py  phases.py  ppo_recurrent.py  rollout_buffer.py  train.py
python/train/ppo_recurrent/: __init__.py  config.py  evaluate.py  logging.py  losses.py  lr_schedule.py  metrics.py  orchestration.py  ppo_updater.py  rollout_collector.py  trainer.py
python/xushi2/: __init__.py  env.py  obs_manifest.py  reward.py  runner.py
replays/: phase3_v3_eval.replay
src/: CMakeLists.txt
src/bots/: CMakeLists.txt
src/bots/include/xushi2/bots/: bot.h  runner.h
src/bots/src/: bot.cpp  runner.cpp
src/common/: CMakeLists.txt
src/common/include/xushi2/common/: action_canon.hpp  assert.hpp  fixed_vector.hpp  limits.hpp  math.hpp  result.hpp  types.h
src/python_bindings/: CMakeLists.txt  module.cpp
src/sim/: CMakeLists.txt
src/sim/include/xushi2/sim/: obs.h  obs_utils.h  sim.h
src/sim/src/: actor_obs.cpp  critic_obs.cpp  obs_utils.cpp  sim.cpp
src/sim/src/internal/: sim_combat.cpp  sim_combat.h  sim_hash.cpp  sim_hash.h  sim_objective.cpp  sim_objective.h  sim_spawn_reset.cpp  sim_spawn_reset.h  sim_tick_pipeline.cpp  sim_tick_pipeline.h  sim_weapon_ranger.cpp  sim_weapon_ranger.h
src/viewer/: CMakeLists.txt
src/viewer/src/: main.cpp
tests/: CMakeLists.txt
tests/bots/: test_runner.cpp
tests/common/: test_config.hpp
tests/integration/: test_smoke.cpp
tests/observations/: test_actor_leak.cpp  test_actor_obs.cpp  test_critic_obs.cpp  test_obs_dims.cpp  test_obs_utils.cpp
tests/replay/: test_golden_replay.cpp
tests/sim/: test_combat.cpp  test_config_validation.cpp  test_determinism.cpp  test_movement.cpp  test_objective.cpp  test_reload.cpp  test_respawn.cpp  test_smoke.cpp
